--- a/GrecosQuestionnaire/Views/Survey/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Survey/Index.cshtml
@@ -531,7 +531,7 @@
                                                                         <label>
                                                                             <input type="checkbox" name="@item.Id" value="@newline"
                                                                                    @(itemValue.Contains(newline) ? "checked='checked'" : string.Empty) />
-                                                                            @newline
+                                                                            newline
                                                                         </label>
                                                                         <input type="text" name="@(item.Id + "t")" value="@ViewData[(item.Id + "t").ToString(CultureInfo.InvariantCulture)]" />
                                                                     }
@@ -861,6 +861,67 @@
                                                         </div>
                                                     </div>
                                                 }
+                                                else if (item1.QuestionItemType == QuestionItemType.TextBox)
+                                                {
+                                                    <div class="form-group row">
+                                                        <label for="textbox" class="col-sm-5 col-form-label" style="padding-left:20px">@item1.Title</label>
+                                                        <div class="col-sm-7">
+                                                            <input type="text" class="form-control" id="textbox" name="@item1.Id" value="@ViewData[@item1.Id.ToString(CultureInfo.InvariantCulture)]" />
+                                                        </div>
+                                                    </div>
+                                                }
+                                                else if (item1.QuestionItemType == QuestionItemType.CheckList)
+                                                {
+                                                    <div class="form-group row">
+
+                                                        @if (!string.IsNullOrEmpty(item1.Title))
+                                                        {
+                                                            <div class="col-md-@(12 - item1.Parts) col-xs-@(12 - item1.Parts)" style="padding-left: 20px; @(i > 0 ? "margin-top: 8px;" : "padding-top: 13px")">
+                                                                @item1.Title
+                                                            </div>
+                                                        }
+
+                                                        <div class="col-sm-7">
+                                                            <div class="dropdown">
+                                                                <a class="dropdown-toggle" data-toggle="dropdown">
+                                                                    Select <span class="caret"></span>
+                                                                </a>
+                                                                <ul class="dropdown-menu">
+
+                                                                    @foreach (var line in item1.Items.Split('\n'))
+                                                                    {
+                                                                        <li>
+                                                                            <div class="checkbox" style="margin-top: 4px; padding-left: 50px;">
+                                                                                @if (line.Contains("[]"))
+                                                                                {
+                                                                                    string newline = line.Replace("[]", "");
+
+                                                                                    <label>
+                                                                                        <input type="checkbox" name="@item1.Id" value="@newline"
+                                                                                               @(itemValue.Contains(newline) ? "checked='checked'" : string.Empty) />
+                                                                                        newline
+                                                                                    </label>
+                                                                                    <input type="text" name="@(item1.Id + "t")" value="@ViewData[(item1.Id + "t").ToString(CultureInfo.InvariantCulture)]" />
+                                                                                }
+                                                                                else
+                                                                                {
+                                                                                    <label>
+                                                                                        <input type="checkbox" name="@item1.Id" value="@line"
+                                                                                               @(itemValue.Contains(line) ? "checked='checked'" : string.Empty) />
+                                                                                        @line
+                                                                                    </label>
+                                                                                }
+
+                                                                            </div>
+                                                                        </li>
+                                                                    }
+
+                                                                </ul>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+                                                }
                                                 else if (item1.QuestionItemType == QuestionItemType.Rate2)
                                                 {
                                                     if (!string.IsNullOrEmpty(item1.Title))
@@ -895,7 +956,71 @@
                                                     </div>
                                                     <div class="clearfix"></div>
                                                 }
+                                                else if (item1.QuestionItemType == QuestionItemType.Date)
+                                                {
+                                                    @if (!string.IsNullOrEmpty(item1.Title))
+                                                    {
+                                                        <div class="col-md-@(12 - item1.Parts) col-xs-@(12 - item1.Parts)" style="padding-left: 5px; @(i > 0 ? "margin-top: 8px;" : "padding-top: 13px")">
+                                                            @item1.Title
+                                                        </div>
+                                                    }
+                                                    <div>
+                                                        <div class="form-group row">
+                                                            <label for="from" class="col-sm-2 col-form-label">
+                                                                from:
+                                                            </label>
+                                                            <div class="col-sm-1" style="padding-top: 5px">
+                                                                <input type="date" name="@item1.Id" id="from" value="@ViewData[@item1.Id.ToString(CultureInfo.InvariantCulture)]" />
+                                                            </div>
+                                                        </div>
 
+                                                        <div class="form-group row">
+                                                            <label for="to" class="col-sm-6 col-form-label" style="text-align:right">
+                                                                to:
+                                                            </label>
+                                                            <div class="col-sm-1" style="padding-top: 5px; padding-left: 25px">
+                                                                <input type="date" name="@(item1.Id + "t")" id="to" value="@ViewData[(item1.Id + "t").ToString(CultureInfo.InvariantCulture)]" />
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                }
+                                                else if (item1.QuestionItemType == QuestionItemType.Time)
+                                                {
+                                                    @if (!string.IsNullOrEmpty(item1.Title))
+                                                    {
+                                                        <div class="col-md-@(12 - item1.Parts) col-xs-@(12 - item1.Parts)" style="padding-left: 5px; @(i > 0 ? "margin-top: 8px;" : "padding-top: 13px")">
+                                                            @item1.Title
+                                                        </div>
+                                                    }
+                                                    <div>
+                                                        <div class="form-group row">
+                                                            <label for="from" class="col-sm-2 col-form-label">
+                                                                from:
+                                                            </label>
+                                                            <div class="col-sm-1" style="padding-top: 5px">
+                                                                <input type="time" name="@item1.Id" id="from" value="@ViewData[@item1.Id.ToString(CultureInfo.InvariantCulture)]" />
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="form-group row">
+                                                            <label for="to" class="col-sm-6 col-form-label" style="text-align:right">
+                                                                to:
+                                                            </label>
+                                                            <div class="col-sm-1" style="padding-top: 5px; padding-left: 25px">
+                                                                <input type="time" name="@(item1.Id + "t")" id="to" value="@ViewData[(item1.Id + "t").ToString(CultureInfo.InvariantCulture)]" />
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                }
+                                                else if (item1.QuestionItemType == QuestionItemType.NumberBox)
+                                                {
+                                                    <div class="form-group row">
+                                                        <label for="numberbox" class="col-sm-5 col-form-label" style="padding-left:20px">@item1.Title</label>
+                                                        <div class="col-sm-7">
+                                                            <input type="number" step="0.01" min="0" class="form-control" id="numberbox" placeholder="0,00" name="@item1.Id" value="@ViewData[@item1.Id.ToString(CultureInfo.InvariantCulture)]" />
+                                                        </div>
+                                                    </div>
+                                                }
                                                 <div class="col-sm-4 text-danger text-center" style="font-size: 10px">
                                                     @Html.ValidationMessage(item1.Id.ToString(), "*Field is required")
                                                 </div>
@@ -964,6 +1089,9 @@
             $('div.showSubClass7').hide();
             $('div.showSubClass8').hide();
             $('div.showSubClass9').hide();
+            $('div.showSubClass10').hide();
+            $('div.showSubClass11').hide();
+            $('div.showSubClass12').hide();
             $('div.show1').hide();
             $('div.show2').hide();
             $('div.show3').hide();
@@ -1789,6 +1917,30 @@
 
         $(document).on("change", "input.hideSubClass9", function () {
             $('div.showSubClass9').hide('slow');
+        });
+
+        $(document).on("change", "input.showSubClass10", function () {
+            $('div.showSubClass10').show('slow');
+        });
+
+        $(document).on("change", "input.hideSubClass10", function () {
+            $('div.showSubClass10').hide('slow');
+        });
+
+        $(document).on("change", "input.showSubClass11", function () {
+            $('div.showSubClass11').show('slow');
+        });
+
+        $(document).on("change", "input.hideSubClass11", function () {
+            $('div.showSubClass11').hide('slow');
+        });
+
+        $(document).on("change", "input.showSubClass12", function () {
+            $('div.showSubClass12').show('slow');
+        });
+
+        $(document).on("change", "input.hideSubClass12", function () {
+            $('div.showSubClass12').hide('slow');
         });
 
         $(document).ready(function () {
