--- a/GrecosQuestionnaire/Views/Survey/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Survey/Index.cshtml
@@ -469,40 +469,38 @@
                                     }
                                     else if (item.QuestionItemType == QuestionItemType.ComboList)
                                     {
-                                        if (item.Parts == 0)
-                                        {
-                                            item.Parts = 8;
-                                        }
-
                                         @if (!string.IsNullOrEmpty(item.Title))
                                         {
-                                            <div class="col-md-@(12 - item.Parts) col-xs-@(12 - item.Parts)" style="padding-left: 5px; @(i > 0 ? "margin-top: 2px;" : "padding-top: 2px")">
+                                            <div class="col-md-@(12 - item.Parts) col-xs-@(12 - item.Parts)" style="padding-left: 5px; padding-bottom: 10px; @(i > 0 ? "margin-top: 10px;" : "padding-top: 10px")">
                                                 @item.Title
                                             </div>
                                         }
 
-                                        foreach (var line in item.Items.Split('\n'))
-                                        {
-                                            if (line.Contains("$"))
-                                            {
-                                                var newLine = line.Split('$')[0];
-                                                var cssClass = line.Split('$')[1];
+                                        <div style="text-align: left; padding-left: 323px ; font-size:small;  @(i > 0 ? "margin-top: 20px;" : "padding-top: 20px")">
 
-                                                <label class="radio-inline">
-                                                    <input class="@cssClass" type="radio" name="@item.Id" value="@newLine"
-                                                           @(itemValue.Contains(newLine) ? "checked='checked'" : string.Empty) />
-                                                    @newLine
-                                                </label>
-                                            }
-                                            else
+                                            @foreach (var line in item.Items.Split('\n'))
                                             {
-                                                <label class="radio-inline">
-                                                    <input type="radio" name="@item.Id" value="@line"
-                                                           @(itemValue.Contains(line) ? "checked='checked'" : string.Empty) />
-                                                    @line
-                                                </label>
+                                                if (line.Contains("$"))
+                                                {
+                                                    var newLine = line.Split('$')[0];
+                                                    var cssClass = line.Split('$')[1];
+
+                                                    <label class="radio-inline">
+                                                        <input class="@cssClass" type="radio" name="@item.Id" value="@newLine"
+                                                               @(itemValue.Contains(newLine) ? "checked='checked'" : string.Empty) />
+                                                        @newLine
+                                                    </label>
+                                                }
+                                                else
+                                                {
+                                                    <label class="radio-inline">
+                                                        <input type="radio" name="@item.Id" value="@line"
+                                                               @(itemValue.Contains(line) ? "checked='checked'" : string.Empty) />
+                                                        @line
+                                                    </label>
+                                                }
                                             }
-                                        }
+                                        </div>
                                     }
                                     else if (item.QuestionItemType == QuestionItemType.CheckList)
                                     {
